# torch-extension

./: .gitignore  CMakeLists.txt  MANIFEST.in  example.py  readme.md  setup.py  torch_ext.cpp  torch_extension.cpp
torch_extension/: __init__.py
torch_extension/ext_lib/: __init__.py
torch_extension/python/: ops.py
torch_extension/src/: ops.cpp
